@@ -17,6 +17,8 @@
 */
 
 #include <ql/date.hpp>
+#include <ql/userconfig.hpp>
+#include <ql/types.hpp>
 #include <qla/qladdin.hpp>
 #include <Addins/Guile/guileutils.hpp>
 extern "C" {
@@ -132,3 +134,12 @@ SCM qlListType(SCM x) {
     }
 }
 
+// support for QuantLib sessions - not yet implemented
+
+#ifdef QL_ENABLE_SESSIONS
+
+QuantLib::Integer QuantLib::sessionId() {
+    return 0;
+}
+
+#endif
